--- a/src/modules/Profile.css
+++ b/src/modules/Profile.css
@@ -1,14 +1,21 @@
-#profile .container img {
-  margin-top: 20px;
-  width: 250px;
-  height: 250px;
-  border: 15px solid #e0e0e0;
-  border-radius: 50%;
+#profile .container {
+  margin-bottom: 30px;
 }
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 768px) {
+  margin-bottom: 0;
+}
+
   #profile .container img {
-    width: 170px;
-    height: 170px;
-    border: 10px solid #e0e0e0;
+    margin-top: 20px;
+    width: 250px;
+    height: 250px;
+    border: 15px solid #e0e0e0;
+    border-radius: 50%;
   }
-}
+  @media (min-width: 992px) and (max-width: 1199px) {
+    #profile .container img {
+      width: 170px;
+      height: 170px;
+      border: 10px solid #e0e0e0;
+    }
+  }
